--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
         </div>
       
     </div>
+     
+     <div class="row " >
+        <div class="col-md-2 bg-white">
+            <img width="100" height="100" src="images/friends.webp" alt="">
+         </div>
+         <div class="col-md-2">
+            <img width="100" height="100" src="images/friends.webp" alt="">
+         </div>
+         <div class="col-md-2">
+            <img width="100" height="100"  src="images/friends.webp" alt="">
+         </div>
+         <div class="col-md-2">
+            <img width="100" height="100" src="images/friends.webp" alt="">
+         </div>
+         <div class="col-md-2">
+            <img width="100" height="100" src="images/friends.webp" alt="">
+         </div>
+         <div class="col-md-2">
+            <img width="100" height="100" src="images/friends.webp" alt="">
+         </div>
+     </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
